# pursuit-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  flake.nix  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
.serena/: project.yml
flakes/: default.nix  devShells.nix  packages.nix  pre-commit.nix  treefmt.nix  uv2nix.nix
src/pursuit_mcp/: format.py  search.py  server.py  types.py
tests/: test_format.py  test_integration.py  test_search.py
